worker: render user fonts at correct weight (variable-font axis)
The subprocess worker rendered Inter at its default weight (≈7% narrower than
Android Studio) because the variable-font weight axis was never applied.

Root cause: the user app's compile-SDK android.jar puts an unpopulated
android.os.Build on the worker's user classloader — SDK_INT=0 and every String
field null. Compose only applies Font(..., variationSettings) when
SDK_INT >= 26, so at 0 the wght axis was skipped.

Fixes:
- populateBuildStub: set SDK_INT=36 (matching the framework) and fill null Build
  String fields (FINGERPRINT etc., else <clinit> NPEs blank the render). Fields
  are static final, written via sun.misc.Unsafe.
- WorkerAssetRepository: decode the "res/<abs-path>" font values back to the real
  file in BOTH openAsset (API-29 font loader, used once SDK_INT>=29) and
  openNonAsset (legacy loader).

Verified via local-repro: OnboardingPreview headline now 645px (= in-process),
body wraps to 3 lines like Studio; StartupPreview still renders (no SDK_INT=36
regression). Documented in COMPOSABLE_RENDERING.md.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>